feat: SignScreen UI 구성, 구글 원탭 로그인 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HomeBar Order</string>
+    <string name="google_sign_in_button">Google 계정으로 로그인</string>
 </resources>
