--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="dialog_message_manual_body_5">주문내역 화면에서 주문 내역을 확인할 수 있습니다.</string>
     <string name="dialog_message_manual_body_6">다른 기기에 같은 구글 계정으로 로그인해서 주문내역을 실시간으로 받아볼 수 있습니다.</string>
     <string name="dialog_button_manual_start">HomeBar Order 시작하기</string>
+
+    <string name="content_description_menu">Menu</string>
 </resources>
