--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,11 +27,14 @@
     <string name="dialog_button_cancel">취소</string>
     <string name="dialog_button_delete">삭제</string>
     <string name="dialog_button_save">저장</string>
+    <string name="dialog_message_edit_category_text">카테고리 수정</string>
 
     <string name="content_description_menu">Menu</string>
     <string name="content_description_add_category">add_category</string>
     <string name="content_description_edit_category">edit_category</string>
     <string name="content_description_delete_category">delete_category</string>
+    <string name="content_description_back_button">back_button</string>
+    <string name="content_description_info_icon">info_icon</string>
 
     <string name="top_appbar_title_category">Category</string>
 
