--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="content_description_menu_image">menu_image</string>
     <string name="content_description_get_menu_image">get_menu_image</string>
     <string name="content_description_search_button">search_button</string>
+    <string name="content_description_plus_button">plus_button</string>
+    <string name="content_description_minus_button">minus_button</string>
 
     <string name="drop_down_menu_item_delete">삭제</string>
     <string name="drop_down_menu_item_edit">수정</string>
