--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="message_sign_in_success">HomeBar Order 로그인 성공.</string>
     <string name="message_is_category_blank">카테고리를 입력해 주세요.</string>
     <string name="message_is_category_and_menu_name_blank">메뉴명과 카테고리를 입력해 주세요.</string>
+    <string name="message_is_cart_blank">메뉴를 선택해 주세요.</string>
 
     <string name="dialog_message_manual_title">HomeBar Order에 오신 것을 환영합니다.</string>
     <string name="dialog_message_manual_text">HomeBar Order를 사용하는 방법에 대해 안내드립니다. 아래의 단계를 따라주세요.</string>
@@ -41,6 +42,16 @@
     <string name="order_dialog_order">주문하기</string>
 
 
+    <string name="order_result_dialog_success_title">주문완료</string>
+    <string name="order_result_dialog_success_body">주문이 완료 되었습니다.</string>
+    <string name="order_result_dialog_fail_title">주문실패</string>
+    <string name="order_result_dialog_fail_body">"""주문이 정상적으로 완료되지 않았습니다.
+                    |이용에 불편을드려 죄송합니다.
+                    |네트워크 연결 상태를 확인해 주세요.
+                """</string>
+    <string name="order_result_dialog_button_close">확인</string>
+
+    <string name="order_in_progress_dialog_body">주문중입니다 ~</string>
 
     <string name="content_description_menu">Menu</string>
     <string name="content_description_add_category">add_category</string>
