--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,11 @@
 
     <string name="order_in_progress_dialog_body">주문중입니다 ~</string>
 
+    <string name="sign_out_dialog_message">"""로그아웃하시겠습니까?
+                |저장하신 메뉴 정보는 삭제되지 않습니다.
+            """</string>
+    <string name="sign_out_dialog_button_sign_out">로그아웃</string>
+
     <string name="content_description_menu">Menu</string>
     <string name="content_description_add_category">add_category</string>
     <string name="content_description_edit_category">edit_category</string>
@@ -79,6 +84,7 @@
     <string name="top_appbar_title_category">Category</string>
     <string name="top_appbar_title_menu">Menu</string>
     <string name="top_appbar_title_edit_add_menu">메뉴추가, 수정</string>
+    <string name="top_appbsr_title_setting">Setting</string>
 
     <string name="placeholder_add_category">카테고리 등록</string>
     <string name="placeholder_search_menu">메뉴를 검색해주세요.</string>
@@ -90,13 +96,19 @@
     <string name="button_edit_menu">수정</string>
     <string name="button_add_menu">추가</string>
     <string name="button_category">카테고리</string>
-    
+
     <string name="menu_screen_text_all_price">상품금액</string>
     <string name="menu_screen_text_all_menu_count">주문수량</string>
     <string name="menu_screen_text_menu_count">개</string>
     <string name="menu_screen_button_text_all_clear">전체취소</string>
     <string name="menu_screen_button_text_order">주문하기</string>
 
+    <string name="setting_screen_text_menu_format">메뉴형식</string>
+    <string name="setting_screen_text_image_grid">ImageGrid</string>
+    <string name="setting_screen_text_image_list">ImageList</string>
+    <string name="setting_screen_text_no_image_list">NoImageList</string>
+    <string name="setting_screen_text_google_forms">고객의견</string>
+    <string name="setting_screen_text_sign_out">로그아웃</string>
 
     <string name="mange_category_manual">"""카테고리를 등록해 주세요.
                         |카테고리는 등록한 순서대로 화면에 표시됩니다.
@@ -106,4 +118,5 @@
     <string name="drawer_menu_screen_name_menu">메뉴판</string>
     <string name="drawer_menu_screen_name_manage_category">카테고리추가, 수정</string>
     <string name="drawer_menu_screen_name_manage_menu">메뉴추가, 수정</string>
+    <string name="drawer_menu_screen_name_setting">설정</string>
 </resources>
