--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,14 @@
     <string name="dialog_message_manual_header_4">4.</string>
     <string name="dialog_message_manual_header_5">5.</string>
     <string name="dialog_message_manual_header_6">6.</string>
+    <string name="dialog_message_manual_header_7">7.</string>
     <string name="dialog_message_manual_body_1">좌측 상단의 메뉴 아이콘을 클릭해 주세요.</string>
     <string name="dialog_message_manual_body_2">카테고리 등록,수정 화면으로 이동해서 카테고리를 먼저 등록해 주세요.</string>
     <string name="dialog_message_manual_body_3">메뉴 등록, 수정 화면으로 이동해서 카테고리별 메뉴를 등록해 주세요.</string>
     <string name="dialog_message_manual_body_4">메뉴판 화면에서 등록한 카테고리와 메뉴들을 확인하고 주문할 수 있습니다.</string>
     <string name="dialog_message_manual_body_5">주문내역 화면에서 주문 내역을 확인할 수 있습니다.</string>
-    <string name="dialog_message_manual_body_6">다른 기기에 같은 구글 계정으로 로그인해서 주문내역을 실시간으로 받아볼 수 있습니다.</string>
+    <string name="dialog_message_manual_body_6">HomeBar Order Manager 앱에서 같은 구글 계정으로 로그인해서 주문내역을 실시간으로 받아볼 수 있습니다.</string>
+    <string name="dialog_message_manual_body_7">다른 사용자가 메뉴 정보를 수정하지 못하도록 설정에서 관리자 모드를 비활성화 할 수 있습니다.</string>
     <string name="dialog_button_manual_start">HomeBar Order 시작하기</string>
     <string name="dialog_message_category_delete_body">"""카테고리를 삭제하시겠습니까?
                         | 해당 카테고리로 등록한 메뉴가 있는 경우 삭제할 수 없습니다."""</string>
@@ -112,6 +114,7 @@
     <string name="setting_screen_text_no_image_list">NoImageList</string>
     <string name="setting_screen_text_google_forms">고객의견</string>
     <string name="setting_screen_text_sign_out">로그아웃</string>
+    <string name="setting_screen_text_manage_mode">관리자 모드</string>
 
     <string name="mange_category_manual">"""카테고리를 등록해 주세요.
                         |카테고리는 등록한 순서대로 화면에 표시됩니다.
