--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,12 @@
     <string name="drawer_menu_screen_name_manage_category">카테고리추가, 수정</string>
     <string name="drawer_menu_screen_name_manage_menu">메뉴추가, 수정</string>
     <string name="drawer_menu_screen_name_setting">설정</string>
+
+    <string name="menu_save_success_dialog_body">메뉴가 성공적으로 저장되었습니다!</string>
+    <string name="menu_save_success_dialog_yes_button">이어서 추가하기</string>
+
+    <string name="menu_edit_success_dialog_body">메뉴가 성공적으로 수정되었습니다!</string>
+    <string name="menu_edit_success_dialog_yes_button">확인</string>
+
+    <string name="menu_save_in_progress_message">메뉴를 저장하는 중입니다...</string>
 </resources>
