--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="dialog_message_manual_header_5">5.</string>
     <string name="dialog_message_manual_header_6">6.</string>
     <string name="dialog_message_manual_header_7">7.</string>
+    <string name="dialog_message_manual_header_8">8.</string>
     <string name="dialog_message_manual_body_1">좌측 상단의 메뉴 아이콘을 클릭해 주세요.</string>
     <string name="dialog_message_manual_body_2">카테고리 등록,수정 화면으로 이동해서 카테고리를 먼저 등록해 주세요.</string>
     <string name="dialog_message_manual_body_3">메뉴 등록, 수정 화면으로 이동해서 카테고리별 메뉴를 등록해 주세요.</string>
@@ -25,12 +26,16 @@
     <string name="dialog_message_manual_body_5">주문내역 화면에서 주문 내역을 확인할 수 있습니다.</string>
     <string name="dialog_message_manual_body_6">HomeBar Order Manager 앱에서 같은 구글 계정으로 로그인해서 주문내역을 실시간으로 받아볼 수 있습니다.</string>
     <string name="dialog_message_manual_body_7">다른 사용자가 메뉴 정보를 수정하지 못하도록 설정에서 관리자 모드를 비활성화 할 수 있습니다.</string>
+    <string name="dialog_message_manual_body_8">테이블 번호는 설정에서 변경할 수 있습니다.</string>
+
     <string name="dialog_button_manual_start">HomeBar Order 시작하기</string>
+
     <string name="dialog_message_category_delete_body">"""카테고리를 삭제하시겠습니까?
                         | 해당 카테고리로 등록한 모든 메뉴가 삭제됩니다."""</string>
     <string name="dialog_button_cancel">취소</string>
     <string name="dialog_button_delete">삭제</string>
     <string name="dialog_button_save">저장</string>
+    <string name="dialog_button_yes">확인</string>
     <string name="dialog_message_edit_category_text">카테고리 수정</string>
     <string name="dialog_message_delete_menu">메뉴를 삭제하시겠습니까?</string>
 
@@ -82,7 +87,7 @@
 
     <string name="price">원</string>
     <string name="count">개</string>
-    <string name="order_number">주문번호</string>
+    <string name="order_number">주문 테이블 번호</string>
 
     <string name="menu_item_all_category">전체</string>
 
@@ -109,12 +114,17 @@
     <string name="menu_screen_button_text_order">주문하기</string>
 
     <string name="setting_screen_text_menu_format">메뉴형식</string>
-    <string name="setting_screen_text_image_grid">ImageGrid</string>
-    <string name="setting_screen_text_image_list">ImageList</string>
-    <string name="setting_screen_text_no_image_list">NoImageList</string>
+    <string name="setting_screen_text_image_grid">Image grid</string>
+    <string name="setting_screen_text_image_list">Image list</string>
+    <string name="setting_screen_text_no_image_list">No image list</string>
     <string name="setting_screen_text_google_forms">고객의견</string>
     <string name="setting_screen_text_sign_out">로그아웃</string>
     <string name="setting_screen_text_manage_mode">관리자 모드</string>
+    <string name="setting_screen_text_edit_table_number">테이블 번호 수정</string>
+    <string name="setting_screen_text_manage_mode_message">관리자 모드를 활성화 하기 위해 로그인한 이메일 주소를 입력해주세요</string>
+    <string name="setting_screen_text_email_mismatch">이메일이 일치하지 않습니다.</string>
+    <string name="setting_screen_text_is_not_manage_mode">관리자 모드일 때만 수정할 수 있습니다.</string>
+    <string name="setting_screen_text_table_number">테이블 번호</string>
 
     <string name="mange_category_manual">"""카테고리를 등록해 주세요.
                         |카테고리는 등록한 순서대로 화면에 표시됩니다.
@@ -126,11 +136,12 @@
     <string name="drawer_menu_screen_name_manage_menu">메뉴추가, 수정</string>
     <string name="drawer_menu_screen_name_setting">설정</string>
 
-    <string name="menu_save_success_dialog_body">메뉴가 성공적으로 저장되었습니다!</string>
-    <string name="menu_save_success_dialog_yes_button">이어서 추가하기</string>
+    <string name="navigate_dialog_button_yes">확인</string>
+    <string name="navigate_dialog_body">""" "확인" 을 누르면 이전 화면으로 돌아갑니다.
+                    | 작성중인 내용은 저장되지 않습니다."""</string>
 
-    <string name="menu_edit_success_dialog_body">메뉴가 성공적으로 수정되었습니다!</string>
-    <string name="menu_edit_success_dialog_yes_button">확인</string>
+    <string name="toast_message_image_size_big">20MB가 넘는 이미지는 첨부할 수 없습니다.</string>
+    <string name="toast_message_image_resize">고화질의 이미지는 일반화질로 압축되어 저장됩니다.</string>
 
-    <string name="menu_save_in_progress_message">메뉴를 저장하는 중입니다...</string>
+    <string name="menu_save_in_progress_dialog">메뉴를 등록 중입니다.</string>
 </resources>
